k8s/mysql-service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: winesaps-mysql-service-external
  namespace: tomsther
  labels:
    app: mysql-label
spec:
  type: NodePort
  selector:
    app: mysql-label
  ports:
    - name: mysql-port-ext
      protocol: TCP
      port: 3306
      targetPort: 3306
      nodePort: 31306
