k8s/winesaps-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: winesaps-service
  namespace: tomsther
  labels:
    app: winesaps-label
spec:
  type: NodePort
  selector:
    app: winesaps-label
  ports:
    - name: winesaps-port
      protocol: UDP
      port: 33996
      targetPort: 33996
      nodePort: 30996
