k8s/winesaps-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: winesaps-web-service
  namespace: tomsther
  labels:
    app: winesaps-web-label
spec:
  type: ClusterIP
  selector:
    app: winesaps-web-label
  ports:
    - name: winesaps-web-port
      protocol: TCP
      port: 80
